# CuteEngine

./: .ccls  .gitignore  CMakeLists.txt  collision-main.cpp  config  doxyfile  main.cpp  makefile  readme.md
assets/: test-map.json
include/: BasicObject.h  Collision.h  CollisionRect.h  Common.h  Entity.h  Game.h  Math.h  Object.h  PlayState.h  Sprite.h  State.h  Tileset.h  game-object.h  game.h
include/Asset/: Asset.h
include/CT/Asset/: Asset.h
include/CT/Common/: Constants.h  Globals.h  Types.h
include/CT/Core/: CTBasic.h
include/CT/Factory/: TextureFactory.h
include/CT/Scene/: Scene.h  SceneTree.h
include/CT/Service/: Container.h  Service.h  TextureFactoryService.h
include/Common/: Constants.h  Globals.h  Types.h
include/ECS/: Component.h  System.h  TransformComponent.h  World.h
include/ECS/Component/: CollisionComponent.h  ColorComponent.h  Component.h  PositionComponent.h  (+4 more)
include/Factory/: TextureFactory.h
include/Game/: Game.h  GameScene.h
include/bullet/: bullet.h
include/collision/: collision_rect.h
include/common/: Constants.h  Globals.h  types.h
include/container/: entity-container.h  typed-container.h
include/ds/: quad-tree.h
include/entity/: entity.h  player.h
include/math/: timer.h
include/sprite/: sprite.h
include/util/: Logging.h
src/: BasicObject.cpp  CMakeLists.txt  CollisionComponent.cpp  CollisionSystem.cpp  Component.cpp  Entity.cpp  Game.cpp  Globals.cpp  Logging.cpp  MoveSystem.cpp  Object.c  Object.cpp  PositionSystem.cpp  RenderSystem.cpp  SoundComponent.cpp  Sprite.cpp  SpriteComponent.cpp  State.cpp  System.cpp  Tileset.cpp  TimerComponent.cpp  TimerSystem.cpp  TransformComponent.cpp  World.cpp  bullet.cpp  entity-container.cpp  entity.cpp  game-object.cpp  game.cpp  player.cpp  sprite.cpp
src/CT/: Asset.cpp  CMakeLists.txt  CTBasic.cpp  CollisionSystem.cpp  Container.cpp  EntityFactory.cpp  Globals.cpp  MoveSystem.cpp  RenderSystem.cpp  Scene.cpp  SceneTree.cpp  SoundComponent.cpp  SpriteComponent.cpp  TextureFactory.cpp  TimerComponent.cpp  TransformComponent.cpp
src/Game/: CMakeLists.txt  Game.cpp  GameScene.cpp
(+21 files in other folders)
